--- a/dotnet-sso-web-probe/appsettings.json
+++ b/dotnet-sso-web-probe/appsettings.json
@@ -1,7 +1,7 @@
 ﻿{
   "Keycloak": {
     "Url": "http://localhost:8080",
-    "Realm": "master",
-    "ClientId": "dotnet-sso-probe",
+    "Realm": "sso-probe",
+    "ClientId": "dotnet-sso-web-probe",
   }
 }
