--- a/dotnet-sso-wpf-probe/dotnet-sso-wpf-probe.csproj
+++ b/dotnet-sso-wpf-probe/dotnet-sso-wpf-probe.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
@@ -9,4 +9,8 @@
         <UseWPF>true</UseWPF>
     </PropertyGroup>
 
+    <ItemGroup>
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
+        <PackageReference Include="Serilog.Sinks.TextWriter" Version="3.0.0" />
+    </ItemGroup>
 </Project>
