--- a/dotnet-sso-wpf-probe/dotnet-sso-wpf-probe.csproj
+++ b/dotnet-sso-wpf-probe/dotnet-sso-wpf-probe.csproj
@@ -10,6 +10,8 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.Identity.Client" Version="4.77.1" />
+      <PackageReference Include="Microsoft.Identity.Client.Broker" Version="4.77.1" />
       <PackageReference Include="Serilog" Version="4.3.0" />
       <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
