WPF with WAM (#3)

--- a/dotnet-sso-wpf-probe/dotnet-sso-wpf-probe.csproj
+++ b/dotnet-sso-wpf-probe/dotnet-sso-wpf-probe.csproj
@@ -1,4 +1,4 @@
-﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
     <PropertyGroup>
         <OutputType>WinExe</OutputType>
@@ -10,7 +10,10 @@
     </PropertyGroup>
 
     <ItemGroup>
-        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0"/>
-        <PackageReference Include="Serilog.Sinks.TextWriter" Version="3.0.0" />
+      <PackageReference Include="Microsoft.Identity.Client" Version="4.77.1" />
+      <PackageReference Include="Microsoft.Identity.Client.Broker" Version="4.77.1" />
+      <PackageReference Include="Serilog" Version="4.3.0" />
+      <PackageReference Include="Serilog.Sinks.Console" Version="6.0.0" />
     </ItemGroup>
+
 </Project>
