--- a/web-probe/appsettings.json
+++ b/web-probe/appsettings.json
@@ -2,6 +2,6 @@
   "Keycloak": {
     "Url": "http://localhost:8080",
     "Realm": "sso-probe",
-    "ClientId": "dotnet-sso-web-probe",
+    "ClientId": "sso-dotnet-web-probe",
   }
 }
